# CogniMesh

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cognimesh-sbom.json  plan.md
services/_template/python_service/: Dockerfile  README.md  pyproject.toml
services/_template/python_service/app/: __init__.py  main.py
services/_template/python_service/tests/: test_health.py
services/action-control/: Dockerfile  README.md  pyproject.toml
services/action-control/app/: main.py
services/action-control/app/api/: action_api.py
services/action-control/app/core/: config.py  functions.py  security.py
services/action-control/app/models/: action_model.py
services/action-control/app/services/: repository.py
services/action-control/tests/: test_action_api.py
services/compute-control/: Dockerfile  README.md  pyproject.toml
services/compute-control/app/: __init__.py  main.py
services/compute-control/app/adapters/: __init__.py  local_sql.py
services/compute-control/app/api/: __init__.py  compute.py
services/compute-control/app/core/: config.py  security.py
services/compute-control/app/models/: __init__.py  compute.py
services/compute-control/app/services/: __init__.py  repository.py
services/compute-control/tests/: conftest.py  test_compute_api.py
services/ml-control/: Dockerfile  README.md  pyproject.toml
services/ml-control/app/: __init__.py  main.py
services/ml-control/app/api/: health.py  ml_api.py
services/ml-control/app/core/: config.py  security.py
services/ml-control/app/models/: ml_model.py
services/ml-control/app/services/: repository.py
services/ml-control/tests/: test_ml_api.py
services/object-registry/: Dockerfile  README.md  pyproject.toml
services/object-registry/app/: __init__.py  main.py
services/object-registry/app/core/: config.py  security.py
services/object-registry/app/db/: base.py  session.py
services/object-registry/app/models/: __init__.py  audit.py  dataset.py  identity.py  lineage.py  link_type.py  namespace.py  object_property.py  object_type.py  policy.py  revision.py  source_system.py  workspace.py
services/object-registry/app/repositories/: generic.py  graph_repository.py
services/object-registry/app/schemas/: common.py  dataset_table.py  graph.py  identity.py  lineage.py  link_type.py  namespace.py  object_property.py  object_type.py  source_system.py  workspace.py
services/object-registry/app/seed/: employee_domain.py
services/object-registry/app/services/: audit_service.py  graph_service.py  identity_service.py  lineage_service.py  policy_service.py  registry_service.py  revision_service.py
services/object-registry/cognimesh_object_registry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/object-registry/tests/: conftest.py  test_identity_policy.py  test_lineage_provenance.py  test_rest_registry.py  test_seed_and_graphql.py
services/query-service/: Dockerfile  README.md  pyproject.toml
services/query-service/app/: main.py
services/query-service/app/api/: graphql_api.py  (+1 more)
services/query-service/tests/: conftest.py  test_query_api.py
(+280 files in other folders)
