[project]
name = "cognimesh-compute-control"
version = "0.1.0"
description = "CogniMesh Compute And Query Engines control plane"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.7,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
duckdb = [
  "duckdb>=1.1,<2.0",
]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
