[project]
name = "cognimesh-python-service-template"
version = "0.0.0"
description = "CogniMesh Python service template"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

